- Fix ban webpage - Implement potato leaderboard - Add /ban /unban and /tp-to-agua